--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="content">
             <p>Below is the link to the privacy policy for our Worklet : OD181SRM</p>
-            <a href="/privpolicy.html" class="btn"> Link to Privacy Policy <span class="fas fa-chevron-right"></span> </a>
+            <a href="../privpolicy.html" class="btn"> Link to Privacy Policy <span class="fas fa-chevron-right"></span> </a>
         </div>
 
     </div>
