--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="#home">home</a>
         <a href="#about">about</a>
         <a href="#privacy">privacy</a>
+        <a href="https://firebasestorage.googleapis.com/v0/b/samsung-db-9d686.appspot.com/o/app-release.apk?alt=media&token=29f07fc2-9e14-47d3-ab9c-050b61296a8d" download>download</a>
        
     </nav>
 
@@ -89,6 +90,7 @@
 </section>
 
 <!-- about section ends -->
+
 
 <!-- privacy section starts  -->
 
