--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> OD181SRM Data Personality </a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#about">about</a>
-        <a href="#privacy">privacy</a>
-        <a href="https://firebasestorage.googleapis.com/v0/b/samsung-db-9d686.appspot.com/o/app-release.apk?alt=media&token=29f07fc2-9e14-47d3-ab9c-050b61296a8d" download>download</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#privacy">Privacy</a>
+        <a href="https://firebasestorage.googleapis.com/v0/b/samsung-db-9d686.appspot.com/o/app-release.apk?alt=media&token=29f07fc2-9e14-47d3-ab9c-050b61296a8d" download>Downlaod Apk</a>
        
     </nav>
 
